# KasSigner

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Install.sh  KasSigner_Install_v1_0_1.sh  LICENSE  Makefile  README.md  SECURITY.md  index.html  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bootloader/: Cargo.toml  build.rs
bootloader/.cargo/: config.toml
bootloader/assets/: icon_about.raw  icon_addr.raw  icon_back.raw  icon_backv2.raw  icon_send.raw  icon_settings.raw  kascoin_90.raw  logo_320x240.raw
bootloader/src/: firmware_hash.rs  main.rs  version.rs
bootloader/src/app/: boot_test.rs  data.rs  input.rs  mod.rs  signing.rs
bootloader/src/crypto/: constant_time.rs  flow.rs  mod.rs  secret_box.rs  secure_zeroize.rs
bootloader/src/features/: fw_update.rs  krc20.rs  mod.rs  self_test.rs  stego.rs  verify.rs
bootloader/src/handlers/: camera_loop.rs  export.rs  menu.rs  mod.rs  sd.rs  seed.rs  settings.rs  stego.rs  tx.rs
bootloader/src/hw/: battery.rs  battery_m5.rs  battery_ws.rs  board.rs  cam_dma.rs  camera.rs  camera_gc0308.rs  camera_ov2640.rs  camera_ov5640.rs  display.rs  display_m5.rs  display_ws.rs  icon_data.rs  lockdown.rs  mod.rs  ov5640_af_fw.rs  pmu.rs  pmu_m5.rs  pmu_ws.rs  screenshot.rs  sd_backup.rs  sdcard.rs  sdcard_m5.rs  sdcard_ws.rs  sound.rs  sound_m5.rs  sound_ws.rs  touch.rs  touch_cst816d.rs  touch_ft6336u.rs
bootloader/src/qr/: decoder.rs  decoder_m5.rs  decoder_ws.rs  encoder.rs  mod.rs  payload.rs
bootloader/src/ui/: helpers.rs  icon_browser.rs  keyboard.rs  logo_data.rs  mod.rs  pin_ui.rs  prop_fonts.rs  redraw.rs  screens.rs  seed_manager.rs  setup_wizard.rs
bootloader/src/wallet/: address.rs  bip32.rs  bip39.rs  bip39_wordlist.rs  bip85.rs  hmac.rs  mod.rs  pskt.rs  schnorr.rs  sighash.rs  std_pskt.rs  storage.rs  transaction.rs  xpub.rs
css/: app.css
docs/: BUILD_FLASH_GUIDE.md  EFUSE_RUNBOOK.md  KEY_DERIVATION.md  REPRODUCIBLE_BUILD.md  STEGANOGRAPHY.md
js/: app.js
kassee/: Cargo.toml  build.sh
kassee/src/: address.rs  bip32.rs  kspt.rs  lib.rs  main.rs  pskt.rs  qr.rs  rpc.rs  wallet.rs
kassee/web/: index.html  manifest.json
kassee/web/constellation/: index.html
kassee/web/css/: app.css
kassee/web/js/: app.js
kassee/web/pkg/: kassee_web.d.ts  kassee_web.js  kassee_web_bg.wasm  kassee_web_bg.wasm.d.ts  package.json
pkg/: kassee_web.d.ts  kassee_web.js  kassee_web_bg.wasm  kassee_web_bg.wasm.d.ts
rqrr_nostd/: Cargo.toml
rqrr_nostd/src/: decode.rs  detect.rs  galois.rs  geometry.rs  lib.rs  prepare.rs
rqrr_nostd/src/identify/: grid.rs  match_capstones.rs
tools/: Cargo.toml  build_production.sh  build_with_hash.sh  gen_hash.rs  gen_keypair.rs  mirror.rs  setup_check.rs  verify.rs  verify_key.py
