# KasSigner — Air-gapped offline signing device for Kaspa
# Copyright (C) 2025-2026 KasSigner Project (kassigner@proton.me)
# License: GPL-3.0
#
# ~45,000 lines of bare-metal no_std Rust. No operating system.
# No vendor libraries in the signing path.

[package]
name = "kassigner-bootloader"
version = "1.0.3"
edition = "2021"
authors = ["KasSigner Team"]

[features]
default = ["waveshare"]
waveshare = []
ov2640-wide = ["waveshare"]
m5stack = []
# OV5640 autofocus firmware loader — enable when the AF-capable module is installed.
# Pulls in ov5640_af_fw.rs (3726-byte MCU blob) and activates load_af_firmware().
af = []
production = ["silent"]
silent = []
verbose-boot = []
skip-tests = []
screenshot = []
mirror = ["screenshot"]
icon-browser = []
test-psram = []

[dependencies]
esp-hal = { version = "1.0", features = ["esp32s3", "unstable", "psram"] }
esp-backtrace = { version = "0.15", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.13", default-features = false, features = ["esp32s3", "jtag-serial"] }
esp-alloc = "0.7"
esp-bootloader-esp-idf = { version = "0.2", features = ["esp32s3"] }
esp32s3 = { version = "0.30", features = ["rt"] }
rqrr = { path = "../rqrr_nostd", default-features = false }

# Display — ST7789 instead of ILI9342C (mipidsi supports both)
mipidsi = "0.9"
embedded-hal-bus = "0.3"
static_cell = "2.1"
embedded-hal = "1.0"
embedded-graphics = "0.8"
tinybmp = "0.6"
embedded-iconoir = { version = "0.2", default-features = false, features = ["24px"] }

# Crypto
sha2 = { version = "0.10", default-features = false }
heapless = "0.8"
k256 = { version = "0.13.4", default-features = false, features = ["arithmetic", "ecdsa"] }
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes"] }
blake2 = { version = "0.10.6", default-features = false }

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = false
overflow-checks = true
