# KasSigner — Air-gapped offline signing device for Kaspa
# Copyright (C) 2025-2026 KasSigner Project (kassigner@proton.me)
# License: GPL-3.0

[package]
name = "firmware-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen-hash"
path = "gen_hash.rs"

[[bin]]
name = "gen-keypair"
path = "gen_keypair.rs"

[[bin]]
name = "kassigner-mirror"
path = "mirror.rs"

[[bin]]
name = "kassigner-setup"
path = "setup_check.rs"

[[bin]]
name = "kassigner-verify"
path = "verify.rs"

[dependencies]
sha2 = "0.10"
k256 = { version = "0.13", features = ["arithmetic", "ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serialport = "4"
minifb = "0.27"
